Feature contact upEnhance Contact Section with LinkedIn Informationdate (#1)
* Updated portfolio design

* Improved contact section with LinkedIn

---------

Co-authored-by: kukku <kukkuannamathew51@gmail.com>

--- a/index.html
+++ b/index.html
@@ -37,9 +37,12 @@
     </section>
 
     <section>
-        <h2>Contact</h2>
-        <p>Email: example@email.com</p>
-    </section>
-
+    <h2>Contact</h2>
+    <p>Email: chandana@email.com</p>
+    <p>LinkedIn: linkedin.com/in/chandana</p>
+</section>
+<footer>
+    <p>© 2026 Chandana Pallegar</p>
+</footer>
 </body>
 </html>
