Convert skills into animated AI-style cards

--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
     </section>
 
     <section id="skills">
-        <h2>Skills</h2>
-        <div class="cards">
-            <div class="card">Python</div>
-            <div class="card">SQL</div>
-            <div class="card">Git & GitHub</div>
-            <div class="card">Machine Learning</div>
-        </div>
-    </section>
+    <h2>Skills</h2>
+    <div class="skills-container">
+        <div class="skill-card">Python</div>
+        <div class="skill-card">SQL</div>
+        <div class="skill-card">Git & GitHub</div>
+        <div class="skill-card">Machine Learning</div>
+    </div>
+</section>
 
     <section id="projects">
         <h2>Projects</h2>
