Convert projects section into professional project card

--- a/index.html
+++ b/index.html
@@ -36,12 +36,16 @@
 </section>
 
     <section id="projects">
-        <h2>Projects</h2>
-        <div class="cards">
-            <div class="card">NL-to-SQL System using LLMs</div>
-            <div class="card">Data Analysis Dashboard</div>
+    <h2>Projects</h2>
+
+    <div class="projects-container">
+        <div class="project-card">
+            <h3>NL-to-SQL System using LLMs</h3>
+            <p>Built an intelligent system that converts natural language queries into optimized SQL using LLMs and DuckDB.</p>
+            <a href="https://github.com/chandanapallegar-beep" target="_blank">View on GitHub</a>
         </div>
-    </section>
+    </div>
+</section>
 
     <section id="contact">
         <h2>Contact</h2>
