Add glowing hero CTA buttons

--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
     <header>
         <h1>Chandana Pallegar</h1>
         <p>AI Developer | Data Enthusiast | Problem Solver</p>
+        <div class="hero-buttons">
+    <a href="https://github.com/chandanapallegar-beep" target="_blank" class="btn-primary">GitHub</a>
+    <a href="#" class="btn-secondary">Download Resume</a>
+</div>
     </header>
 
     <section id="about">
