Add mobile responsiveness

--- a/index.html
+++ b/index.html
@@ -52,10 +52,13 @@
 </section>
 
     <section id="contact">
-        <h2>Contact</h2>
-        <p>Email: chandana@email.com</p>
-        <p>LinkedIn: linkedin.com/in/chandana</p>
-    </section>
+    <h2>Contact</h2>
+    <div class="contact-container">
+        <a href="mailto:your-email@gmail.com" class="contact-card">📧 Email</a>
+        <a href="https://linkedin.com" target="_blank" class="contact-card">💼 LinkedIn</a>
+        <a href="https://github.com/chandanapallegar-beep" target="_blank" class="contact-card">💻 GitHub</a>
+    </div>
+</section>
 
     <footer>
         <p>© 2026 Chandana Pallegar</p>
