--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ window.onload = typeEffect;
         <h1>Chandana Pallegar</h1>
         <p id="typing-text"></p>
         <div class="hero-buttons">
-    <a href="resume.pdf" target="_blank" class="btn">Download Resume</a>
+    <a href="resume.pdf" download class="btn-resume"></a>
 </div>
         <div class="hero-buttons">
     <a href="https://github.com/chandanapallegar-beep" target="_blank" class="btn-primary">GitHub</a>
