Add mobile responsiveness

--- a/index.html
+++ b/index.html
@@ -31,7 +31,12 @@ window.onload = typeEffect;
         <h1>Chandana Pallegar</h1>
         <p id="typing-text"></p>
         <div class="hero-buttons">
-    <a href="resume.pdf" download class="btn-resume"></a>
+    <a href="https://chandanapallegar-beep.github.io/resume.pdf" 
+       download 
+       class="btn-resume">
+       Download Resume
+    </a>
+</div>
 </div>
         <div class="hero-buttons">
     <a href="https://github.com/chandanapallegar-beep" target="_blank" class="btn-primary">GitHub</a>
