Remove purple resume link and fix pink button

--- a/index.html
+++ b/index.html
@@ -4,69 +4,45 @@
     <title>Chandana Portfolio</title>
     <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
-
-    <!-- Navigation -->
     <nav>
-        <a href="#">Home</a>
-        <a href="#about">About</a>
-        <a href="#skills">Skills</a>
-        <a href="#projects">Projects</a>
-        <a href="#contact">Contact</a>
-    </nav>
-
-    <!-- Hero Section -->
+    <a href="#">Home</a>
+    <a href="#">About</a>
+    <a href="#">Skills</a>
+    <a href="#">Projects</a>
+    <a href="#">Contact</a>
+</nav>
     <header>
-        <h1>Chandana Pallegar 🚀</h1>
-        <p>AI Developer | Data Enthusiast | Problem Solver</p>
-
-        <div class="hero-buttons">
-            <a href="https://github.com/chandanapallegar-beep" target="_blank" class="btn-github">
-                GitHub
-            </a>
-
-            <!-- PINK BUTTON (WORKING DOWNLOAD) -->
-            <a href="resume.pdf" download class="btn-resume">
-                Download Resume
-            </a>
-        </div>
+        <h1><strong>Chandana Pallegar 🚀 AI Developer</strong></h1>
+        <p>Aspiring AI & Data Enthusiast</p>
     </header>
 
-    <!-- About -->
-    <section id="about">
+    <section>
         <h2>About Me</h2>
-        <p>I am passionate about Artificial Intelligence, Data Analytics and building intelligent systems that solve real-world problems.</p>
+        <p>I am passionate about AI, Data Analytics and building intelligent systems.</p>
     </section>
 
-    <!-- Skills -->
-    <section id="skills">
+    <section>
         <h2>Skills</h2>
         <ul>
             <li>Python</li>
             <li>SQL</li>
             <li>Git & GitHub</li>
-            <li>Machine Learning</li>
         </ul>
     </section>
 
-    <!-- Projects -->
-    <section id="projects">
+    <section>
         <h2>Projects</h2>
         <p>NL-to-SQL System using LLMs</p>
     </section>
 
-    <!-- Contact -->
-    <section id="contact">
-        <h2>Contact</h2>
-        <p>Email: chandana@email.com</p>
-        <p>LinkedIn: linkedin.com/in/chandana</p>
-    </section>
-
-    <!-- Footer -->
-    <footer>
-        <p>© 2026 Chandana Pallegar</p>
-    </footer>
-
+    <section>
+    <h2>Contact</h2>
+    <p>Email: chandana@email.com</p>
+    <p>LinkedIn: linkedin.com/in/chandana</p>
+</section>
+<footer>
+    <p>© 2026 Chandana Pallegar</p>
+</footer>
 </body>
 </html>
