Add resume download link

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ window.onload = typeEffect;
 </div>
         <div class="hero-buttons">
     <a href="https://github.com/chandanapallegar-beep" target="_blank" class="btn-primary">GitHub</a>
-    <a href="#" class="btn-secondary">Download Resume</a>
+    <a href="resume.pdf" download="Chandana_Pallegar_Resume.pdf" class="btn-secondary">Download Resume</a>
 </div>
     </header>
 
